<resources>
    <string name="app_name">HandBall RefereeKit</string>
    <string name="team_a">Team A</string>
    <string name="value0">0</string>
    <string name="score">Score</string>
    <string name="foul">foul</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
</resources>
